Fixes alignment of related and queued songs blocks. Set fixed height for rows.

--- a/public/sass/components/components.related.scss
+++ b/public/sass/components/components.related.scss
@@ -8,7 +8,7 @@
 
 .c-add-form {
   position: relative;
-  margin-bottom: 5rem;
+  margin-bottom: 5.2rem;
 
   &__btn-add {
     flex: 0 0 auto;
