--- a/public/sass/components/components.song-list-item.scss
+++ b/public/sass/components/components.song-list-item.scss
@@ -2,7 +2,6 @@
   flex: 0 0 auto;
   width: 3rem;
   height: 3rem;
-  margin-left: auto;
 }
 
 .c-song-list-item {
@@ -15,22 +14,28 @@
     border-bottom: 1px solid var(--color-text-primary);
   }
 
-  &__title {
-    text-decoration: none;
-    color: var(--color-text-primary);
+  &__number {
+    margin-right: .5rem;
   }
 
-  &__number {
-    margin-right: 0.5rem;
+  &__title {
+    height: 3.2rem;
+    text-decoration: none;
+    color: var(--color-text-primary);
+    overflow: hidden;
+    margin-right: auto;
   }
 
   &__duration {
-    margin-left: 0.5rem;
     color: var(--color-text-secondary);
+    margin-right: .5rem;
+    margin-left: .5rem;
+    white-space: nowrap;
   }
 
   &__btn-add {
     @extend %song-list-item-button;
+    margin-left: .5rem;
 
     svg {
       polygon, path {
@@ -43,7 +48,7 @@
   &__btn-upvote {
     @extend %song-list-item-button;
     position: relative;
-    margin-right: 0.5rem; // TODO: ugly fix for scroll caused by absolute position of upvote svg part 2
+    margin-right: .5rem; // TODO: ugly fix for scroll caused by absolute position of upvote svg part 2
 
     svg {
       polygon, path {
