--- a/public/sass/components/components.song-queue.scss
+++ b/public/sass/components/components.song-queue.scss
@@ -7,7 +7,7 @@
 }
 
 .c-queue-list {
-  max-height: 32rem;
+  max-height: 42rem;
   overflow-y: scroll;
   overflow-x: hidden; // TODO: ugly fix for scroll caused by absolute position of upvote svg part 1
 }
